Revision history for Perl extension MP3::Podcast.

0.01  Tue Apr 12 14:01:20 2005
	- original version; created by h2xs 1.22 with options
		-AX -n MP3::Podcast
