@@ -1,12 +1,12 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         MP3-Podcast
-version:      0.01
+version:      0.06
 version_from: lib/MP3/Podcast.pm
 installdirs:  site
 requires:
-	XML::RSS:  1.05
-	MP3::Info: 1.13
- 
+    MP3::Info:                     1.13
+    XML::RSS:                      1.05
+
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+generated_by: ExtUtils::MakeMaker version 6.30
