@@ -10,6 +10,6 @@ my $urlbase = shift || die "Base URL missing\n";
 my $dir = shift || die "Dir to scan missing\n";
 
 my $pod = MP3::Podcast->new($dirbase,$urlbase);
-my $rss = $pod->podcast( $dir, "Podcast test" );
+my $rss = $pod->podcast( $dir, "Podcast test", "JJ", "Love Potion #9", 1 ); #Last one for sort
 
 print $rss->as_string;
